add-migration -c DishesDbContext

--- a/DishesAPI/DishesAPI/appsettings.json
+++ b/DishesAPI/DishesAPI/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DishesDBConnectionString": "Data Source=Dishes.db"
+
+  },
+
+
   "AllowedHosts": "*"
 }
